@@ -1,16 +1,15 @@
 package org.asamk.signal.manager.storage.stickers;
 
-import java.sql.Connection;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.util.Collection;
-import java.util.stream.Collectors;
-
 import org.asamk.signal.manager.api.StickerPackId;
 import org.asamk.signal.manager.storage.Database;
 import org.asamk.signal.manager.storage.Utils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.sql.Connection;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+import java.util.Collection;
 
 public class StickerStore {
 
@@ -22,12 +21,14 @@ public class StickerStore {
     public static void createSql(Connection connection) throws SQLException {
         // When modifying the CREATE statement here, also add a migration in AccountDatabase.java
         try (final var statement = connection.createStatement()) {
-            statement.executeUpdate("                                    CREATE TABLE sticker (\n"
-                    + "                                      _id INTEGER PRIMARY KEY,\n"
-                    + "                                      pack_id BLOB UNIQUE NOT NULL,\n"
-                    + "                                      pack_key BLOB NOT NULL,\n"
-                    + "                                      installed INTEGER NOT NULL DEFAULT FALSE\n"
-                    + "                                    ) STRICT;\n" + "");
+            statement.executeUpdate("""
+                                    CREATE TABLE sticker (
+                                      _id INTEGER PRIMARY KEY,
+                                      pack_id BLOB UNIQUE NOT NULL,
+                                      pack_key BLOB NOT NULL,
+                                      installed INTEGER NOT NULL DEFAULT FALSE
+                                    ) STRICT;
+                                    """);
         }
     }
 
@@ -36,13 +37,16 @@ public class StickerStore {
     }
 
     public Collection<StickerPack> getStickerPacks() {
-        final var sql = String.format(
-                "                SELECT s._id, s.pack_id, s.pack_key, s.installed\n" + "                FROM %s s",
-                TABLE_STICKER);
+        final var sql = (
+                """
+                SELECT s._id, s.pack_id, s.pack_key, s.installed
+                FROM %s s
+                """
+        ).formatted(TABLE_STICKER);
         try (final var connection = database.getConnection()) {
             try (final var statement = connection.prepareStatement(sql)) {
                 try (var result = Utils.executeQueryForStream(statement, this::getStickerPackFromResultSet)) {
-                    return result.collect(Collectors.toList());
+                    return result.toList();
                 }
             }
         } catch (SQLException e) {
@@ -51,8 +55,13 @@ public class StickerStore {
     }
 
     public StickerPack getStickerPack(StickerPackId packId) {
-        final var sql = String.format("                SELECT s._id, s.pack_id, s.pack_key, s.installed\n"
-                + "                FROM %s s\n" + "                WHERE s.pack_id = ?", TABLE_STICKER);
+        final var sql = (
+                """
+                SELECT s._id, s.pack_id, s.pack_key, s.installed
+                FROM %s s
+                WHERE s.pack_id = ?
+                """
+        ).formatted(TABLE_STICKER);
         try (final var connection = database.getConnection()) {
             try (final var statement = connection.prepareStatement(sql)) {
                 statement.setBytes(1, packId.serialize());
@@ -64,8 +73,12 @@ public class StickerStore {
     }
 
     public void addStickerPack(StickerPack stickerPack) {
-        final var sql = String.format("                INSERT INTO %s (pack_id, pack_key, installed)\n"
-                + "                VALUES (?, ?, ?)\n" + "", TABLE_STICKER);
+        final var sql = (
+                """
+                INSERT INTO %s (pack_id, pack_key, installed)
+                VALUES (?, ?, ?)
+                """
+        ).formatted(TABLE_STICKER);
         try (final var connection = database.getConnection()) {
             try (final var statement = connection.prepareStatement(sql)) {
                 statement.setBytes(1, stickerPack.packId().serialize());
@@ -79,8 +92,13 @@ public class StickerStore {
     }
 
     public void updateStickerPackInstalled(StickerPackId stickerPackId, boolean installed) {
-        final var sql = String.format("                UPDATE %s\n" + "                SET installed = ?\n"
-                + "                WHERE pack_id = ?", TABLE_STICKER);
+        final var sql = (
+                """
+                UPDATE %s
+                SET installed = ?
+                WHERE pack_id = ?
+                """
+        ).formatted(TABLE_STICKER);
         try (final var connection = database.getConnection()) {
             try (final var statement = connection.prepareStatement(sql)) {
                 statement.setBytes(1, stickerPackId.serialize());
@@ -95,11 +113,15 @@ public class StickerStore {
     void addLegacyStickers(Collection<StickerPack> stickerPacks) {
         logger.debug("Migrating legacy stickers to database");
         long start = System.nanoTime();
-        final var sql = String.format("                INSERT INTO %s (pack_id, pack_key, installed)\n"
-                + "                VALUES (?, ?, ?)\n" + "", TABLE_STICKER);
+        final var sql = (
+                """
+                INSERT INTO %s (pack_id, pack_key, installed)
+                VALUES (?, ?, ?)
+                """
+        ).formatted(TABLE_STICKER);
         try (final var connection = database.getConnection()) {
             connection.setAutoCommit(false);
-            try (final var statement = connection.prepareStatement(String.format("DELETE FROM %s", TABLE_STICKER))) {
+            try (final var statement = connection.prepareStatement("DELETE FROM %s".formatted(TABLE_STICKER))) {
                 statement.executeUpdate();
             }
             try (final var statement = connection.prepareStatement(sql)) {
